--- a/myplay.yml
+++ b/myplay.yml
@@ -8,4 +8,6 @@
   - name: i want to install the nginx 
     apt:
       name: nginx
-      state: present 
+      state: present
+      default_release: squeeze-backports
+      update_cache: yes 
