--- a/myplay.yml
+++ b/myplay.yml
@@ -2,12 +2,22 @@
 - hosts: all
   become: yes
   tasks:
-  - name: i want to  update the ubuntu node
+  - name: Add epel-release repo
     apt:
-      update_cache: yes
-  - name: i want to install the nginx 
+      name: epel-release
+      state: present
+
+  - name: Install nginx
     apt:
       name: nginx
-      state: latest
-      update_cache: true
-       
+      state: present
+
+  - name: Insert Index Page
+    template:
+      src: index.html
+      dest: /usr/share/nginx/html/index.html
+
+  - name: Start NGiNX
+    service:
+      name: nginx
+      state: started
