--- a/myplay.yml
+++ b/myplay.yml
@@ -18,12 +18,8 @@
       path: /etc/nginx/sites-enabled/default
       state: absent
 
-   
-   
-   
-   
    - name: start nginx service
      service:
       name: nginx
-      state: restart
+      state: restarted
       enabled: yes
