--- a/myplay.yml
+++ b/myplay.yml
@@ -2,24 +2,19 @@
 - hosts: all
   become: yes
   tasks:
-   - name: i want to update the ubuntu server
-     apt:
-      update_cache: yes
-  
+   
    - name: i want to install the nginx server
      apt:
       name: nginx
-      state: latest
-     become: yes 
-
-   
-   - name: Remove file (delete file)
-     file:
-      path: /etc/nginx/sites-enabled/default
-      state: absent
+      state: present
+   - name:
+     template:
+      src: /mytemplates/index.j2
+      dest: /var/www/html/index.html
+  
 
    - name: start nginx service
      service:
       name: nginx
-      state: restarted
-      enabled: yes
+      state: started
+      
