--- a/dbinstall.yml
+++ b/dbinstall.yml
@@ -3,7 +3,32 @@
   become: yes
   gather_facts: yes
   tasks: 
-   - name: Installing the MySQL on the node
-     apt:
-      name: mysql-server
+   - name: Installing the mysql dependencies
+     package:
+      name: "{{item}}"
       state: present
+      update_cache: yes
+     loop:
+      - mysql-server
+      - mysql-client
+      - python-mysqldb
+      - libmysqlclient-dev
+
+   - name: start and enable mysql
+     service:
+       name: mysql
+       state: started
+       enabled: yes
+    
+   - name: creating mysql user 
+     mysql_user:
+       name: "{{DBuser}}"
+       password: "{{DBpassword}}"
+       priv: ' * , *:ALL '
+       host: '%'
+       state: present
+
+   - name: creating database on sql
+     mysql_db:
+       name: "{{DBname}}"
+       state: presnet 
